--- a/mastodon/src/main/res/values/strings.xml
+++ b/mastodon/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+	<string name="mastodon_server_instance_url">mastoturk.org</string>
+
 	<string name="app_name" translatable="false">Mastodon</string>
 
 	<string name="get_started">Create account</string>
