made small changes in splash and signup screen
Spash Screen:

Let’s remove the background
the swiper (one page is enough)
and change the text.
The text could be:
MastoTurk’e hoşgeldiniz!
MastoTurk olası sosyal medya sansürlerine karşı kurulmuş genel amaçlı bir Türkçe
Twitter klonudur. Popüler Türk Twitter hesapları yansılanmaktadır.
Siz de kendi hesabınızı oluşturabilirsiniz.

Signup screen:
changed text to turkish

--- a/mastodon/src/main/res/values/strings.xml
+++ b/mastodon/src/main/res/values/strings.xml
@@ -186,13 +186,13 @@
 	<string name="search_communities">Server name or URL</string>
 	<string name="instance_rules_title">Server Rules</string>
 	<string name="instance_rules_subtitle">By continuing, you agree to follow by the following rules set and enforced by the %s moderators.</string>
-	<string name="signup_title">Create Account</string>
+	<string name="signup_title">Hesap Oluştur</string>
 	<string name="edit_photo">edit</string>
-	<string name="display_name">Name</string>
-	<string name="username">Username</string>
-	<string name="email">Email</string>
-	<string name="password">Password</string>
-	<string name="confirm_password">Confirm password</string>
+	<string name="display_name">Isim</string>
+	<string name="username">Rumuz</string>
+	<string name="email">Eposta</string>
+	<string name="password">Parola</string>
+	<string name="confirm_password">Parola tekrar</string>
 	<string name="password_note">Include capital letters, special characters, and numbers to increase your password strength.</string>
 	<string name="category_academia">Academia</string>
 	<string name="category_activism">Activism</string>
@@ -405,8 +405,8 @@
 	<string name="login_title">Welcome Back</string>
 	<string name="login_subtitle">Log in with the server where you created your account.</string>
 	<string name="server_url">Server URL</string>
-	<string name="welcome_page1_title">What is Mastodon?</string>
-	<string name="welcome_page1_text">Imagine you have an email address that ends with @example.com.\n\nYou can still send and receive emails from anyone, even if their email ends in @gmail.com or @icloud.com or @example.com.</string>
+	<string name="welcome_page1_title">MastoTurk’e hoşgeldiniz!</string>
+	<string name="welcome_page1_text">MastoTurk olası sosyal medya sansürlerine karşı kurulmuş genel amaçlı bir TürkçeTwitter klonudur. Popüler Türk Twitter hesapları yansılanmaktadır.Siz de kendi hesabınızı oluşturabilirsiniz.</string>
 	<string name="welcome_page2_title">Mastodon is like that.</string>
 	<string name="welcome_page2_text">Your handle might be @gothgirl654@example.social, but you can still follow, reblog, and chat with @fallout5ever@example.online.</string>
 	<string name="welcome_page3_title">How do I pick a server?</string>
